<resources>
    <string name="app_name">NextErp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="proceed">Proceed</string>
    <string name="abort">ABORT</string>

    <!-- Stock Count Alerts -->
    <string name="are_you_sure_finish_title">WARNING</string>
    <string name="are_you_sure_finish">Are you sure you want to finish this stock count?</string>
    <string name="are_you_sure_no_bin_match_title">WARNING BINS DON\'T MATCH</string>
    <string name="are_you_sure_no_bin_match">The inputted bin barcode doesn\'t match the on hand bin, would you like to update the product location?</string>
    <string name="are_you_sure_void_title">WARNING</string>
    <string name="are_you_sure_void">Are you sure you want to void this stock count?</string>
    <string name="are_you_sure_delete_title">WARNING</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>

    <!-- Login -->
    <string name="sign_in">Sign-In</string>
    <string name="logo">AppName</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>

    <!-- Navigation -->
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>

    <string name="menu_stock_count">Stock Count</string>
    <string name="menu_stock_count_details">Stock Count Detail</string>
    <string name="menu_stock_count_new">New Stock Count</string>

    <string name="menu_stock_adjustment">Stock Adjustment</string>
    <string name="menu_new_stock_adjustment">New Stock Adjustment</string>
    <string name="menu_stock_adjustment_details">Stock Adjustment Details</string>

    <string name="menu_product_lookup">Product Lookup</string>

    <string name="menu_receiving_details">Purchase Receiving Detail</string>
    <string name="menu_receiving_new">New Purchase Receiving</string>
    <string name="menu_receiving">Purchase Receiving</string>

    <string name="menu_transfer_receiving_details">Transfer Receiving Detail</string>
    <string name="menu_transfer_receiving_new">New Transfer Receiving</string>
    <string name="menu_transfer_receiving">Transfer Receiving</string>

    <string name="logged_user">Logged User</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>

    <!-- Buttons -->
    <string name="save">Save</string>
    <string name="button_void">Void</string>
    <string name="button_finish">Finish</string>

    <!--  Home  -->
    <string name="stock_count_home_title">Stock Count</string>
    <string name="stock_count_description">Hmmmm, how much inventory stock do we have?\nLet\'s find out! Navigate to the stock count page now. </string>
    <string name="stock_count_action_1">Stock Count List</string>
    <string name="stock_count_action_2">New Stock Count</string>

    <string name="stock_adjustment_home_title">Stock Adjustment</string>
    <string name="stock_adjustment_description">Whoa, that\'s not right... I\'ve got to fix that stock right away!</string>
    <string name="stock_adjustment_action_1">Stock Adjustment List</string>
    <string name="stock_adjustment_action_2">New Stock Adjustment</string>

    <string name="receiving_home_title">Purchase Receiving</string>
    <string name="receiving_description">Just received a shipment from a supplier? Navigate to the receiving page now to allocate it!</string>
    <string name="receiving_action_1">Purchase Receiving List</string>
    <string name="receiving_action_2">New Purchase Receiving</string>

    <string name="receiving_transfers_home_title">Transfer Receiving</string>
    <string name="receiving_transfers_description">Oh wow, we need more of that product pronto, luckily our other location sent some of theirs to us!</string>
    <string name="receiving_transfers_action_1">Transfer Receiving List</string>
    <string name="receiving_transfers_action_2">New Transfer Receiving</string>

    <string name="product_lookup_home_title">Product Lookup</string>
    <string name="product_lookup_description">Bins Bins Bins, so many bins everywhere!! But which one should I put this product in?</string>
    <string name="product_lookup_action_1">Product Lookup</string>

    <!-- Product Lookup-->
    <string name="product_lookup_title">Input a barcode to search</string>

    <!-- StockCount New -->
    <string name="bins_spinner_title">Bins-</string>
    <string name="stock_count_name">Stock Count Name</string>

    <!-- StockCount List -->
    <string name="stock_count_prefix">SC-</string>

    <!-- StockCount Form -->
    <string name="select_a_bin">Select a bin</string>
    <string name="sc_number">SC Number</string>

    <!-- Receiving New -->
    <string name="receiving_name">Receiving Name</string>

    <!-- Receiving List -->
    <string name="receiving_prefix">RC-</string>
    <string name="invoiceLabel">&#35;</string>

    <!-- StockAdjustment New -->
    <string name="stock_adjustment_name">Stock Adjustment Name</string>
    <string name="stock_adjustment_note">Notes</string>
    <string name="radio_add_text">Add to stock</string>
    <string name="radio_new_text">Replace current stock</string>

    <!-- StockAdjustment List -->
    <string name="stock_adjustment_prefix">ST-</string>

    <!-- StockCount Form -->
    <string name="st_number">ST Number</string>

    <!-- Receiving Form -->
    <string name="select_an_item">Select an item</string>
    <string name="input_a_qty">Input a qty</string>
    <string name="input_a_multiplier">Input a multiplier</string>
    <string name="no_item_selected">No item selected</string>
    <string name="no_bin_selected">No bin selected</string>
    <string name="in_progress">IN PROGRESS</string>
    <string name="rc_number">RC Number</string>
    <string name="po_number">PO Number</string>
    <string name="view_item_details">View Item Details</string>

    <!--  Form Headers  -->
    <string name="receiving_header_id">ID</string>
    <string name="receiving_header_product">PRODUCT</string>
    <string name="receiving_header_qty">QTY</string>
    <string name="stockcount_header_bin">BIN</string>
    <string name="receiving_header_qty_received">QTY RECEIVED</string>


</resources>
