<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_stock_count"
            android:icon="@drawable/ic_baseline_calculate_24"
            android:title="@string/menu_stock_count" />
        <item
            android:id="@+id/nav_receiving"
            android:icon="@drawable/ic_baseline_directions_car_24"
            android:title="@string/menu_receiving" />
        <item
            android:id="@+id/nav_product_lookup"
            android:icon="@drawable/ic_manage_search_black_24dp"
            android:title="@string/menu_product_lookup" />
    </group>
</menu>