<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.stockcount.form.StockCountFormFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/stockCountNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/stock_count_prefix"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/stockCountNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="18sp"
        android:gravity="end"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:text="@string/st_number"
        app:layout_constraintStart_toEndOf="@+id/stockCountNumberLabel"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/stockStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5dp"
        android:fontFamily="sans-serif-light"
        android:textAllCaps="true"
        android:textFontWeight="600"
        android:textColor="@color/colorAccent"
        android:text="@string/in_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/itemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:textFontWeight="800"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/no_item_selected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockCountNumberLabel" />
    <TextView
        android:id="@+id/binName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:textFontWeight="800"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/no_bin_selected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName" />

    <com.google.android.material.button.MaterialButton
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/binName"
        android:id="@+id/btnLinkToStockDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/view_item_details"
        style="?attr/borderlessButtonStyle"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/binLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/select_a_bin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLinkToStockDetails">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/binField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/select_an_item"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        app:layout_constraintEnd_toStartOf="@+id/qtyLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/binLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/qtyLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:hint="@string/input_a_qty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemLayout"
        app:layout_constraintTop_toBottomOf="@+id/binLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/qtyField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stockCountDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:nestedScrollingEnabled="false"
            android:background="@drawable/table_parent_bg"
            tools:listitem="@layout/stockcount_details_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemLayout"
            app:layout_constraintVertical_bias="1.0"/>

<!--    <com.evrencoskun.tableview.TableView-->
<!--        android:id="@+id/stockCountDetails"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        app:column_header_height="@dimen/table_view_cell_height"-->
<!--        app:row_header_width="@dimen/table_view_row_header_width"-->
<!--        app:selected_color="@color/colorAccent"-->
<!--        app:shadow_color="@color/colorPrimaryUltraLight"-->
<!--        app:unselected_color="@color/colorPrimaryLight"-->
<!--        app:separator_color="@color/colorPrimaryDark"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/itemLayout"-->
<!--        app:layout_constraintVertical_bias="1.0"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/outer_frame_sc"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/finishButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        app:backgroundTint="@color/colorPrimary"
        android:textColor="#FFF"
        android:contentDescription="@string/button_finish"
        android:text="@string/button_finish"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="@id/expandButton" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:backgroundTint="@color/colorPrimaryDark"
        android:textColor="#FFF"
        android:gravity="center"
        android:contentDescription="@string/save"
        android:text="@string/save"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/voidButton"
        app:layout_constraintEnd_toEndOf="@id/expandButton" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/voidButton"
        android:theme="@style/SecondaryButton"
        app:backgroundTint="@color/colorAccent"
        android:textColor="#FFF"
        android:gravity="center"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/button_void"
        android:visibility="invisible"
        android:singleLine="true"
        android:text="@string/button_void"
        app:layout_constraintBottom_toTopOf="@id/expandButton"
        app:layout_constraintEnd_toEndOf="@id/expandButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/expandButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:tint="@color/colorWhite"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_more_horiz_24"/>
    <ProgressBar
        android:id="@+id/progressCircular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>